# webrtc-pion-face-detection-engine

./: README.md  go.mod  go.sum  process.txt
client/: vp8_decoder.go
client/web/: index.html  webrtc.js
inference/: CMakeLists.txt  face_detection.cpp  face_detection_server.cpp  inference_client.go  media_router.go  vp8_decoder.cpp
inference/include/: face_detection.hpp  vp8_decoder.hpp
ingest/: detector_client.go  go.mod  go.sum  main.go
ingest/proto/: inference.pb.go  inference_grpc.pb.go
proto/: go.mod  inference.grpc.pb.h  inference.pb.go  inference.pb.h  inference.proto  inference_grpc.pb.go
proto/webrtc-pion-face-engine/proto/: inference.pb.go  inference_grpc.pb.go
scripts/: build_all.sh  download_haarcascade.sh  run_dev.sh  start_all.sh
signaling/: go.mod  handlers.go  main.go
